[package]
name = "sui-package-utils"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[[bin]]
name = "sui-package-bcs-csv-to-dirs"
path = "src/main_csv.rs"

[[bin]]
name = "sui-packages-graphql-poller"
path = "src/main_graphql.rs"

[[bin]]
name = "sui-framework-packages-fetcher"
path = "src/main_framework.rs"

[lib]
name = "sui_package_utils"
path = "src/lib.rs"

[dependencies]
# sui dependencies
move-binary-format = { git = "https://github.com/MystenLabs/sui", package = "move-binary-format" }
move-bytecode-utils = { git = "https://github.com/MystenLabs/sui", package = "move-bytecode-utils" }
move-core-types = { git = "https://github.com/MystenLabs/sui", package = "move-core-types" }
sui-types = { git = "https://github.com/MystenLabs/sui", package= "sui-types" }

# external dependencies
base64 = "0.22.1"
bcs = "0.1.4"
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
serde = "1.0.219" 
serde_json = "1.0.140"
regex = "1.11.1"
reqwest = { version = "0.12.20", default-features = false, features = [
  "http2",
  "json",
  "rustls-tls",
] }
thiserror = "2.0.12"
